ajax and img upload

--- a/ImageGallery/ImageGallery.csproj
+++ b/ImageGallery/ImageGallery.csproj
@@ -162,8 +162,31 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Images\1427114chan1317403213792.jpg" />
-    <Content Include="Content\Images\180319699.jpg" />
+    <Content Include="Content\ImagesSmall\19-kosmos-oboi-kartinki-foto-1920x1080.jpg" />
+    <Content Include="Content\ImagesSmall\1920_1080_201409030121101140803.jpg" />
+    <Content Include="Content\ImagesSmall\2039_1436438.jpg" />
+    <Content Include="Content\ImagesSmall\5.jpg" />
+    <Content Include="Content\ImagesSmall\6351504c371f2c869e22d061b34cf90d.jpg" />
+    <Content Include="Content\ImagesSmall\artleo.com-39713.jpg" />
+    <Content Include="Content\ImagesSmall\battlefield-4-01-Hd-wallpaper.jpg" />
+    <Content Include="Content\ImagesSmall\Dishonored-2.jpg" />
+    <Content Include="Content\ImagesSmall\full1_metro_last_light.jpg" />
+    <Content Include="Content\ImagesSmall\look.com.ua-127708.jpg" />
+    <Content Include="Content\ImagesSmall\mech-shlem-bronya-dark-souls-plamya-rycar.jpg" />
+    <Content Include="Content\ImagesSmall\molniya_groza_stihiya_pepel_vulkan_1920x1080.jpg" />
+    <Content Include="Content\ImagesSmall\mota_ru_1010708-1920x1080.jpg" />
+    <Content Include="Content\ImagesSmall\oboi-na.ru_wallpapers_20090808_022_resized_1920x1080.jpg" />
+    <Content Include="Content\ImagesSmall\onpape.com-68521101.jpg" />
+    <Content Include="Content\ImagesSmall\post-apocalyptic-обои-для-рабочего-стола-песочница-1408629.jpg" />
+    <Content Include="Content\ImagesSmall\video-game-ocean-war-warship-1920x1080.jpg" />
+    <Content Include="Content\ImagesSmall\wallpaper-2824374.jpg" />
+    <Content Include="Content\ImagesSmall\wallpaper-3004759.jpg" />
+    <Content Include="Content\ImagesSmall\wall_30.jpg" />
+    <Content Include="Content\ImagesSmall\z6T2_KwGhW0.jpg" />
+    <Content Include="Content\ImagesSmall\zAKSHhmnXK-1920x1080.jpg" />
+    <Content Include="Content\ImagesSmall\ZmYeSmMCO1E.jpg" />
+    <Content Include="Content\ImagesSmall\космос-на-стол.jpg" />
+    <Content Include="Content\ImagesSmall\обои-красивые-картинки-Sci-Fi-art-арт-2293753.jpg" />
     <Content Include="Content\Images\19-kosmos-oboi-kartinki-foto-1920x1080.jpg" />
     <Content Include="Content\Images\1920_1080_201409030121101140803.jpg" />
     <Content Include="Content\Images\2039_1436438.jpg" />
@@ -184,12 +207,12 @@
     <Content Include="Content\Images\video-game-ocean-war-warship-1920x1080.jpg" />
     <Content Include="Content\Images\wallpaper-2824374.jpg" />
     <Content Include="Content\Images\wallpaper-3004759.jpg" />
-    <Content Include="Content\Images\wall_30.jpg" />
     <Content Include="Content\Images\z6T2_KwGhW0.jpg" />
     <Content Include="Content\Images\zAKSHhmnXK-1920x1080.jpg" />
     <Content Include="Content\Images\ZmYeSmMCO1E.jpg" />
     <Content Include="Content\Images\космос-на-стол.jpg" />
     <Content Include="Content\Images\обои-красивые-картинки-Sci-Fi-art-арт-2293753.jpeg" />
+    <Content Include="Content\lightbox.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -211,10 +234,14 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\lightbox-plus-jquery.js" />
+    <Content Include="Scripts\lightbox.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -233,6 +260,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Gallery.cshtml" />
+    <Content Include="Views\Home\Upload.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
